fixed video unable to play on mobile

--- a/style.css
+++ b/style.css
@@ -357,6 +357,7 @@ button:hover{
 } */
 
 .video-container iframe{
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
